Fixed bug where first progress pic didnt haveave hover and added 8/9 progress pics

--- a/main.css
+++ b/main.css
@@ -39,6 +39,10 @@ body, html {
     padding-top: 15px;
 }
 
+.paddingBottom {
+    padding-bottom: 30px;
+}
+
 .center {
     text-align: center;
     margin-top: 200px;
