Added Progress pic section

--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@ body, html {
 }
     
 /* Create a Parallax Effect */
-.bgimg-1, .bgimg-2, .bgimg-3 {
+.bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4{
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -27,6 +27,12 @@ body, html {
 
 /* Third image (Contact) */
 .bgimg-3 {
+    background-image: url("baymax3.jpg");
+    min-height: 400px;
+}
+
+/* Fourth image (Contact) */
+.bgimg-4 {
     background-image: url("baymax3.jpg");
     min-height: 400px;
 }
@@ -58,7 +64,7 @@ body, html {
 
 /* Turn off parallax scrolling for tablets and phones */
 @media only screen and (max-device-width: 1024px) {
-    .bgimg-1, .bgimg-2, .bgimg-3 {
+    .bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4{
         background-attachment: scroll;
     }
 }
