--- a/main.css
+++ b/main.css
@@ -19,21 +19,21 @@ body, html {
     min-height: 100%;
 }
 
-/* Second image (Portfolio) */
+/* Second image (Purpose) */
 .bgimg-2 {
     background-image: url("mental1.jpg");
     min-height: 400px;
 }
 
-/* Third image (Contact) */
+/* Third image (Progress Pics) */
 .bgimg-3 {
-    background-image: url("baymax3.jpg");
-    min-height: 400px;
+    background-image: url("baymax5.jpg");
+    min-height: 350px;
 }
 
 /* Fourth image (Contact) */
 .bgimg-4 {
-    background-image: url("baymax3.jpg");
+    background-image: url("work16.jpg");
     min-height: 400px;
 }
 
@@ -57,6 +57,11 @@ body, html {
 #inner {
     display: table;
     margin: 0 auto;
+}
+
+.purpose {
+    font-size: 30px;
+    text-align: center;
 }
 
 .w3-wide {letter-spacing: 10px;}
