Added phone number as suicide hotline and added link to suicide hotline webiste

--- a/main.css
+++ b/main.css
@@ -64,6 +64,11 @@ body, html {
     text-align: center;
 }
 
+.lastQuote {
+    font-size: 14px;
+    padding-top: 10px;
+}
+
 .w3-wide {letter-spacing: 10px;}
 .w3-hover-opacity {cursor: pointer;}
 
